Fix navar-collapse-fixed-top Fixed: https://github.com/t3framework/t3/issues/110

--- a/source/plg_system_t3/base/less/t3-responsive.less
+++ b/source/plg_system_t3/base/less/t3-responsive.less
@@ -38,8 +38,9 @@
       overflow-y: auto;
       top: @navbarHeight;
       bottom: 0;
+      -webkit-overflow-scrolling: touch;
       > * {
-        padding-bottom: 50px;
+        -webkit-transform: translateZ(0);
       }
     }
   }
