--- a/source/tpl_t3_blank/less/navigation-responsive.less
+++ b/source/tpl_t3_blank/less/navigation-responsive.less
@@ -130,7 +130,8 @@
     
     // Full width when fixed
     // ---------------------
-    &.navbar-collapse-fixed-top {
+    &.navbar-collapse-fixed-top,
+	&.navbar-collapse-fixed-bottom {
       margin-left: 0;
       margin-right: 0;
     }
